:art: remove deprecated warnings for Object.newInstance, HelpCtx(Class), FileUtil.preventFileChooserSymlinkTraversal, InputEvent.CTRL_MASK, InputEvent.SHIFT_MASK and Hashing.md5