@@ -44,6 +44,7 @@ import au.gov.asd.tac.constellation.graph.schema.analytic.concept.AnalyticConcep
 import au.gov.asd.tac.constellation.views.analyticview.results.AnalyticResult;
 import au.gov.asd.tac.constellation.views.analyticview.results.ScoreResult;
 import au.gov.asd.tac.constellation.views.analyticview.results.ScoreResult.ElementScore;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -195,7 +196,7 @@ public abstract class ScoreAnalyticPlugin extends AnalyticPlugin<ScoreResult> {
             final List<? extends ParameterValue> chosenTransactionTypes = MultiChoiceParameterType.getChoicesData(transactionTypesParameter);
             if (chosenTransactionTypes.equals(allTransactionTypes)) {
                 // run analytic plugin on the entire graph and compute results
-                PluginExecution.withPlugin(getAnalyticPlugin().newInstance())
+                PluginExecution.withPlugin(getAnalyticPlugin().getDeclaredConstructor().newInstance())
                         .withParameters(parameters)
                         .executeNow(graph);
                 computeResultsFromGraph(graph, parameters);
@@ -209,14 +210,16 @@ public abstract class ScoreAnalyticPlugin extends AnalyticPlugin<ScoreResult> {
                 final StoreGraph subgraph = getSubgraph(graph, SchemaFactoryUtilities.getDefaultSchemaFactory(), transactionTypes);
 
                 // run analytic plugin and compute results
-                PluginExecution.withPlugin(getAnalyticPlugin().newInstance())
+                PluginExecution.withPlugin(getAnalyticPlugin().getDeclaredConstructor().newInstance())
                         .withParameters(parameters)
                         .executeNow(subgraph);
                 copySubgraphToGraph(graph, subgraph);
                 computeResultsFromGraph(graph, parameters);
             }
 
-        } catch (InstantiationException | IllegalAccessException ex) {
+        } catch (final IllegalAccessException | IllegalArgumentException
+                | InstantiationException | NoSuchMethodException
+                | SecurityException | InvocationTargetException ex) {
             Exceptions.printStackTrace(ex);
         }
     }
